# QuickFusing

./: .gitignore  CMakeLists.txt  DMC-FFT.cpp  DMC-SpeedUp.cpp  DemoUseResult.cpp  DirectMagConstraint.cpp  EKFOnly.cpp  FastUwbDemo.cpp  FileTrans.py  GraphWithUwbPose.cpp  IMUOnly-graph_test.cpp  ISAMImu.cpp  ImuHighHZ.cpp  ImuMag.cpp  ImuMagFusion.cpp  JYImuAttitude.cpp  JYImuMag.cpp  JYImuMagISAM.cpp  OnlyImuTestGTSAM.cpp  Pf_frame.hpp  README.md  RangeEkfTest.cpp  RealTimeGraphLocation.cpp  ResultEvaluation.cpp  ResultEvaluation.hpp  SCImuMag.cpp  SearchGrid.py  SophusTest.cpp  TwoFeetsZUPT.cpp  cuda_test.cu  func_test.cpp  graph_test.cpp  graph_test_new.cpp  main.cpp  pdr_pf_test.cpp  pf_test.cpp
ResultData/: ComputeErrorAndTime.py  ComputeErrorOfBeaconData.py  ComputeErrorandTime.py  Plot3d.py  PlotMultiPara.py  PlotProb.py  plot_3d.m  plot_pftimeandaccuracy.py  test_list.py
Scripts/: EllipsoidEq.py  ImuPreprocess.py  ImuResultReader.py  JavaObtainedQuickProcess.py  JavaObtainedUWBProcess.py  JustShowSourceDataJyImu.py  JyImuMagIllustration.py  MobileFileProcess.py  NewUwbDataPreprocess.py  NewUwbDecoder.py  PcSavedReader.py  PlotRange.py  QuickSaveForNewIU.py  SearchDirectMagConstraintPara.py  SearchImuOnlyGraph.py  SearchJYImuMagMagGravity.py  SearchJYImuMagPara.py  SearchParameters.py  SearchTwoFeetZUPT.py  Search_EKFOnlyPara.py  Search_SCImuMag_paras.py  Search_dw_paras.py  ShowOnline.py  ShowPlotTime.py  SpecialHighProcess.py  TwoImuShow.py  UwbDataPreprocess.py  UwbOptimization.py  UwbTimePreprocess.py  UwbValidation.py  attitude_imu_preprocess.py  feature.py  find_right_time_offset.py  newQuickSave.py  plot_attitude.py  search_graph_test_parameter.py  tcp_server_test.py
Scripts/OPENSHOE/: Data_Test.py  PdrEkf.py  Setting.py  ZUPT.py  data_test_mti.py  zupt_test.py
Scripts/ViewerModel/: Agent.py  Beacon.py  LocationViewer.py  PF_FRAME.py  RealTimeShow.py  Real_Data_test.py  Tcp_server.py  TranglePose.py  beacon_out.txt  beacon_set.csv  draw_test.py  gt.csv  pygame_test.py  serials_test.py
include/: EKF.hpp  EKFEigen.h  EKFR.h  EKFSimple.h  EXUWBPF.hpp  ImuIntegrate.h  ImuKeyPointInfo.cpp  ImuKeyPointInfo.h  MYEKF.h  OriUWBPF.hpp  PDRPF.cpp  PDRPF.hpp  PFBase.hpp  PUWBPF.hpp  RangeEKF.cpp  RangeEKF.h  RangeKF.hpp  SettingPara.h  Zero_Detecter.h
include/OwnEdge/: DistanceEdge.cpp  DistanceEdge.h  DistanceSE3Line3D.h  GravityZ.cpp  GravityZ.h  OrientationEdge.cpp  OrientationEdge.h  RelativeMagEdge.cpp  RelativeMagEdge.h  SimpleDistanceEdge.h  SimpleRobustDistanceEdge.h
include/OwnFactor/: MagConstraintFactor.cpp  MagConstraintFactor.h
